--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   my-app:
     build: .
     image: nodejsimage
-    container_name: app-playground
+    container_name: backend
     ports:
       - "3000:3000"
     volumes:
